<resources>
    <string name="app_name">ToDo_FINAL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="updated_description">updated Description</string>
</resources>